# PhobGCC-SW

./: CMakeLists.txt  header_template.h  main.c  sticks.c
include/: main.h
lib/phob-lib/: pkg.yml
lib/phob-lib/portable/raspberrypi/rp2040/: CMakeLists.txt  joybus.c  joybus.h  phob_rp2040.c
lib/phob-lib/portable/raspberrypi/rp2040/vision/: pv_cvideo.c  pv_cvideo_variables.h  pv_draw_graphics.c  pv_draw_menu.c  pv_includes.h  pv_menu.h
lib/phob-lib/portable/raspberrypi/rp2040/vision/images/: deadzone255.h  movewait255.h  pv_cuteghost.h  pv_font.h
lib/phob-lib/src/: curve_fitting.c  curve_fitting.h  filter.c  filter.h  phob.c  phob.h  phob_animation.c  phob_animation.h  phob_board_config.h  phob_buttons.c  phob_calibration.c  phob_config_types.h  phob_const.h  phob_filter.c  phob_filter.h  phob_globals.c  phob_globals.h  phob_hw.h  phob_includes.h  phob_math.c  phob_math.h  phob_matrix.c  phob_matrix.h  phob_settings.c  phob_settings.h  phob_settings_types.h  phob_sticks.c  phob_types.h  stick_cal.c  stick_cal.h
old/PhobGCC/rp2040/: CMakeLists.txt
old/PhobGCC/rp2040/include/storage/pages/: storage.h
src/: curveFitting.c  curveFitting.h  curve_fitting.h  filter.h  phob.c  phob.h  phob_board_config.h  phob_config_types.h  phob_hw.h  phob_includes.h  phob_settings_types.h  phob_types.h  stick_cal.c  stick_cal.h
src/portable/rasberrypi/rp2040/: joybus.c  joybus.h  phob_debug.h  phob_rp2040.c  phob_rp2040.h
src/portable/rasberrypi/rp2040/vision/: cvideo.h  menu.h  pv_cvideo.h  pv_graph.c  pv_navigate_menu.c
src/portable/rasberrypi/rp2040/vision/images/: await255.h  crouch255.h  ledgeL255.h  ledgeR255.h
